--- a/configuration.properties
+++ b/configuration.properties
@@ -1,8 +1,14 @@
+
+
 browser=chrome
+
 amazonUrl=https://www.amazon.com
 wiseUrl=https://www.wisequarter.com
 qdUrl=https://www.qualitydemy.com
+faceUrl=https://www.facebook.com
 herokuUrl=https://the-internet.herokuapp.com/add_remove_elements/
+aeUrl = https://automationexercise.com/
+guruUrl = http://demo.guru99.com/test/web-table-element.php
 
 qdGecerliUsername = anevzatcelik@gmail.com
 qdGecerliPassword = Nevzat152032
@@ -13,6 +19,6 @@ qdGecersizPassword = 12345
 amazonAranacakKelime=Nutella
 amazonExpectedIcerik=Nutella
 
-faceUrl=https://www.facebook.com
+
 
 
